# game.libretro.cannonball

./: CMakeLists.txt  README.md  appveyor.yml
depends/common/cannonball/: CMakeLists.txt
depends/common/tyrquake/: tyrquake.txt
game.libretro.cannonball/: addon.xml.in
game.libretro.cannonball/resources/: settings.xml
game.libretro.cannonball/resources/language/English/: strings.po
